# swu-tools

./: .gitignore  CLAUDE.md  README.md  build_ts26_decks.py  deck_diff.py  export_website_data.py  find_card.py  generate_buy_list.py  lookup_card.py  main.py  prestige_prices.py  pyproject.toml  refresh_cache.py  showcase_prices.py  sort_deck_by_set.py  sync_inventory.py  trilogy_validator.py  update_extras.py  update_prices.py  update_used_card_list.py  validate_deck_format.py
assets/: README.md  set-colors.json
card_data/: jtl.json  lof.json  sec.json  shd.json  sor.json  ts26_decks.json  twi.json
lib/: deck_source.py  swudb.py  tcgcsv.py
portable/: README.md  trilogy_validator.py
