[project]
name = "swu-tools"
version = "0.1.0"
description = "Manage information for SWU Inventory in google sheets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gspread>=6.2.0",
    "oauth2client>=4.1.3",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "ruff>=0.11.6",
]
